增加了通用数据库方案，完成了地标模块

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,5 @@ kotlin.incremental.java=true
 koltin.incremental.useClasspathSnapshot=true
 kotlin.caching.enabled=true
 kotlin.parallel.tasks.in.project=true
+
+jimmer_version=0.8.46
