简单修改了一下配置文件的信息

--- a/module/module-warp/src/main/resources/module/warp/config.yml
+++ b/module/module-warp/src/main/resources/module/warp/config.yml
@@ -1,7 +1,11 @@
 setting:
-  enable: true
+  # 是否启用模块
+  enable: false
   language: "zh_CN"
 database:
+  # 可选类型 YAML,SQL
   type: "yaml"
+  # 是否使用公共数据库文件
   public: true
+  # 数据库表名
   table: "warp"
