完成了礼包功能 修正了一下playerData

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,5 @@ kotlin.caching.enabled=true
 kotlin.parallel.tasks.in.project=true
 
 jimmer_version=0.8.46
+kotlin.experimental.tryK2=true
+kapt.use.k2=true
