--- a/module/module-home/src/main/resources/module/home/config.yml
+++ b/module/module-home/src/main/resources/module/home/config.yml
@@ -2,3 +2,9 @@ setting:
   # 是否启用模块
   enable: false
   language: "zh_CN"
+# 每个玩家最大家的数量
+# 如果有权限 taboopublicwork.home.set.max.* 则最大家的数量为 5
+max_home: 5
+
+# 传送延迟
+delay_tp: 60
